abstract class FFAppConstants {
  static const String kLoginEmailInput = 'login_email_input';
  static const String kLoginPasswordInput = 'login_password_input';
  static const String kLoginSubmitButton = 'login_submit_button';
  static const String kLoginForgotPasswordButton =
      'login_forgot_password_button';
  static const String kRegisterNameInput = 'register_name_input';
  static const String kRegisterEmailInput = 'register_email_input';
  static const String kRegisterPasswordInput = 'register_password_input';
  static const String kRegisterConfirmPasswordInput =
      'register_confirm_password_input';
  static const String kRegisterSubmitButton = 'register_submit_button';
  static const String kMenuDashboardButton = 'menu_dashboard_button';
  static const String kMenuLeadsButton = 'menu_leads_button';
  static const String kMenuTeamButton = 'menu_team_button';
  static const String kMenuSettingsButton = 'menu_settings_button';
  static const String kLeadCreateButton = 'lead_create_button';
  static const String kLeadNameInput = 'lead_name_input';
  static const String kLeadEmailInput = 'lead_email_input';
  static const String kLeadPhoneInput = 'lead_phone_input';
  static const String kLeadDescriptionInput = 'lead_description_input';
  static const String kLeadSourceDropdown = 'lead_source_dropdown';
  static const String kLeadSaveButton = 'lead_save_button';
  static const String kTeamCollaboratorButton = 'team_collaborator_button';
  static const String kTeamDeleteCollaboratorButton =
      'team_delete_collaborator_button';
  static const String kRegistrationTab = 'registration_tab';
}
