...

                                                                          if (!result
                                                                              .success) {
                                                                            await showDialog(
                                                                              context: context,
                                                                              builder: (_) => AlertDialog(
                                                                                key: const ValueKey('error_dialog'),
                                                                                title: Text(
                                                                                  result.title,
                                                                                  key: const ValueKey('error_dialog_title'),
                                                                                ),
                                                                                content: Text(
                                                                                  result.message,
                                                                                  key: const ValueKey('error_dialog_message'),
                                                                                ),
                                                                                actions: [
                                                                                  TextButton(
                                                                                    key: const ValueKey('auth_result_dialog_ok_button'),
                                                                                    onPressed: () => Navigator.pop(context),
                                                                                    child: const Text('OK'),
                                                                                  ),
                                                                                ],
                                                                              ),
                                                                            );
...
                                                                            context:
                                                                                context,
                                                                            builder: (_) =>
                                                                                AlertDialog(
                                                                              key: const ValueKey('error_dialog'),
                                                                              title: Text(
                                                                                'Erro!',
                                                                                key: const ValueKey('error_dialog_title'),
                                                                              ),
                                                                              content: Text(
                                                                                'Erro desconhecido ao fazer login',
                                                                                key: const ValueKey('error_dialog_message'),
                                                                              ),
...
